<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable"
    android:padding="@dimen/page_margin">


    <TextView
        android:id="@+id/page_title"
        style="@style/page_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/login_third_party" />

    <View
        android:id="@+id/underline"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_below="@+id/page_title"
        android:layout_alignStart="@+id/page_title"
        android:layout_alignEnd="@+id/page_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/green" />


    <androidx.cardview.widget.CardView
        android:id="@+id/data_recipient_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/underline"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/page_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_data_recipient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_recipient" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/emblem_of_mauritania" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/logo"
                    android:text="@string/khidmaty"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/page_margin"
                android:layout_marginBottom="@dimen/page_margin"
                android:background="@color/gray" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/page_margin"
                android:text="@string/requested_data" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/label_nnn"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_check_circle_outline_24" />

            </RelativeLayout>





            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/first_and_middlename"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_check_circle_outline_24" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/label_last_name"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_check_circle_outline_24" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/label_dob"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baseline_check_circle_outline_24" />

            </RelativeLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <RelativeLayout
        android:id="@+id/bottom_btns_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/page_margin"
        android:layout_marginEnd="@dimen/page_margin">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            style="@style/back_btn_style"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/label_back" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            style="@style/next_btn_style"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/label_next" />


    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">


        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/page_margin" />


        <Button
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_retry"
            android:visibility="gone" />


        <TextView
            android:id="@+id/txt_status_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text=""
            android:textSize="20sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>