<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable"
    android:padding="@dimen/page_margin">


    <TextView
        android:id="@+id/page_title"
        style="@style/page_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/label_settings" />


    <TextView
        android:id="@+id/label_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/page_margin"
        android:text="@string/label_general"
        android:textStyle="bold" />


    <androidx.cardview.widget.CardView
        android:id="@+id/general_card"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_general"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/general_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/language_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/label_language"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/txt_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/language_right_arrow"
                    android:text="English"
                    android:textSize="14sp" />


                <ImageView
                    android:id="@+id/language_right_arrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/gray"
                    android:src="@drawable/baseline_chevron_right_24" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EEEBEB" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/label_contact_us"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


                <ImageView
                    android:id="@+id/conatct_right_arrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/gray"
                    android:src="@drawable/baseline_chevron_right_24" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/label_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/general_card"
        android:layout_marginStart="10dp"

        android:layout_marginTop="@dimen/page_margin"
        android:text="@string/label_security"
        android:textStyle="bold" />


    <androidx.cardview.widget.CardView
        android:id="@+id/security_card"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/label_security"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/label_change_pin"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


                <ImageView
                    android:id="@+id/change_pin_right_arrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/gray"
                    android:src="@drawable/baseline_chevron_right_24" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EEEBEB" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/label_privacy_policy"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


                <ImageView
                    android:id="@+id/privacy_right_arrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/gray"
                    android:src="@drawable/baseline_chevron_right_24" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/txt_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_below="@+id/security_card"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
      android:layout_marginTop="@dimen/page_margin"
        android:text="@string/label_logout"
        android:textColor="@color/red" />


</RelativeLayout>